se termino con la version de tablet del index

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
     <!-- IDENTIFICADOR DE FEDERACIÓN -->
     <section class="container federacionContenedor">
         <div class="row federacionSubContenedor">
-            <img id="federacionImagen" class="col-4" src="./Multimedia/Icons/ITF_CHAN_HUN.png" alt="ITF CHAN HUN Logo">
-            <div id="federacionTexto" class="col-8">
+            <img id="federacionImagen" class="col-4 col-md-5" src="./Multimedia/Icons/ITF_CHAN_HUN.png"
+                alt="ITF CHAN HUN Logo">
+            <div id="federacionTexto" class="col-8 col-md-7">
                 <p>ITF CHIFT Uruguay</p>
                 <p>CHAN HUN</p>
                 <p>Con Sede en Ottawa, Canada</p>
