iniciada versión desktop, falta desde federacionContenedor

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     </div>
 
     <!-- BOTONES DE NAVEGACIÓN -->
-    <section class="container">
-        <div class="row">
-            <span id="btnAcerca" class="col-12 botonMain"> Acerca de </span>
-            <span id="btnLogros" class="col-12 botonMain"> Logros </span>
-            <span id="btnGaleria" class="col-12 botonMain"> Galería </span>
-            <span id="btnContacto" class="col-12 botonMain"> Contacto </span>
+    <section class="container mw-100 navegacion">
+        <div class="row subNavegacion">
+            <span id="btnAcerca" class="col-12 botonMain col-xl-5"> Acerca de </span>
+            <span id="btnLogros" class="col-12 botonMain col-xl-5"> Logros </span>
+            <span id="btnGaleria" class="col-12 botonMain col-xl-5"> Galería </span>
+            <span id="btnContacto" class="col-12 botonMain col-xl-5"> Contacto </span>
         </div>
     </section>
 
