finalizado el inicio y los 4 breakpoints

--- a/index.html
+++ b/index.html
@@ -26,28 +26,29 @@
     </div>
 
     <!-- BOTONES DE NAVEGACIÓN -->
-    <section class="container mw-100 navegacion">
-        <div class="row subNavegacion">
-            <span id="btnAcerca" class="col-12 botonMain col-xl-5"> Acerca de </span>
-            <span id="btnLogros" class="col-12 botonMain col-xl-5"> Logros </span>
-            <span id="btnGaleria" class="col-12 botonMain col-xl-5"> Galería </span>
-            <span id="btnContacto" class="col-12 botonMain col-xl-5"> Contacto </span>
-        </div>
-    </section>
-
-    <!-- IDENTIFICADOR DE FEDERACIÓN -->
-    <section class="container federacionContenedor">
-        <div class="row federacionSubContenedor">
-            <img id="federacionImagen" class="col-4 col-md-5" src="./Multimedia/Icons/ITF_CHAN_HUN.png"
-                alt="ITF CHAN HUN Logo">
-            <div id="federacionTexto" class="col-8 col-md-7">
-                <p>ITF CHIFT Uruguay</p>
-                <p>CHAN HUN</p>
-                <p>Con Sede en Ottawa, Canada</p>
+    <main id="grilla">
+        <section class="container mw-100 navegacion">
+            <div class="row subNavegacion">
+                <span id="btnAcerca" class="col-12 botonMain"> Acerca de Javier del Castillo</span>
+                <span id="btnLogros" class="col-12 botonMain"> Logros </span>
+                <span id="btnGaleria" class="col-12 botonMain"> Galería </span>
+                <span id="btnContacto" class="col-12 botonMain"> Contacto </span>
             </div>
-        </div>
-    </section>
+        </section>
 
+        <!-- IDENTIFICADOR DE FEDERACIÓN -->
+        <section class="container federacionContenedor">
+            <div class="row federacionSubContenedor">
+                <img id="federacionImagen" class="col-4 col-md-5" src="./Multimedia/Icons/ITF_CHAN_HUN.png"
+                    alt="ITF CHAN HUN Logo">
+                <div id="federacionTexto" class="col-8 col-md-7">
+                    <p>ITF CHIFT Uruguay</p>
+                    <p>CHAN HUN</p>
+                    <p>Con Sede en Ottawa, Canada</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <!-- SECCIÓN DE NOVEDADES (CAROUSELL) -->
     <p id="novedades">Novedades</p>
@@ -90,21 +91,22 @@
     <!-- PIE DE PAGINA -->
     <footer class="mw-100 container">
         <div class="row">
-            <img id="footerFederation" class="col-12" src="./Multimedia/Icons/ITF_CHAN_HUN.png"></img>
-            <p id="footerTexto" class="col-12">Sul-Sa, es una Academia de Taekwon-do con Sede en Uruguay, avalada y
+            <img id="footerFederation" class="col-12 col-xl-4" src="./Multimedia/Icons/ITF_CHAN_HUN.png"></img>
+            <p id="footerTexto" class="col-12 col-xl-8">Sul-Sa, es una Academia de Taekwon-do con Sede en Uruguay,
+                avalada y
                 autorizada por la ITF
                 CHIFT Presidida por
                 S.G.M. Phap Lu
             </p>
         </div>
         <section class="row" id="footerRedes">
-            <a class="col-2 footerBotonRedes" href="https://www.facebook.com/javier.delcastillogimenez"> <img
+            <a class="col-3 footerBotonRedes" href="https://www.facebook.com/javier.delcastillogimenez"> <img
                     class="footerBotonRedesImg" src="./Multimedia/Icons/Redes/facebook.png"></a>
-            <a class="col-2 footerBotonRedes" href="https://www.youtube.com/@DELKASULSA"> <img
+            <a class="col-3 footerBotonRedes" href="https://www.youtube.com/@DELKASULSA"> <img
                     class="footerBotonRedesImg" src="./Multimedia/Icons/Redes/youtube.png"></a>
-            <a class="col-2 footerBotonRedes" href="https://www.instagram.com/masterdelcastillo_1/"> <img
+            <a class="col-3 footerBotonRedes" href="https://www.instagram.com/masterdelcastillo_1/"> <img
                     class="footerBotonRedesImg" src="./Multimedia/Icons/Redes/instagram.png"></a>
-            <a class="col-2 footerBotonRedes"
+            <a class="col-3 footerBotonRedes"
                 href="https://api.whatsapp.com/send/?phone=59892455751&text&type=phone_number&app_absent=0"> <img
                     class="footerBotonRedesImg" src="./Multimedia/Icons/Redes/whatsapp.png"></a>
             <!-- <a class="col-2 footerBotonRedes"> <img class="footerBotonRedesImg"
