se terminó con el breakpoint 02

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
     <main id="grilla">
         <section class="container mw-100 navegacion">
             <div class="row subNavegacion">
-                <span id="btnAcerca" class="col-12 botonMain"> Acerca de</span>
+                <a href="./Pages/about.html" class="col-12 botonMain"><span id="btnAcerca">
+                        Acerca de</span></a>
                 <span id="btnLogros" class="col-12 botonMain"> Logros </span>
+                <span id="btnLogros" class="col-12 botonMain"> Academias </span>
                 <span id="btnGaleria" class="col-12 botonMain"> Galería </span>
                 <span id="btnContacto" class="col-12 botonMain"> Contacto </span>
             </div>
