se termino con la pagina about

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -132,10 +132,12 @@
         <div class="accordion accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        Competidor
-                    </button>
+                    <a class="linkItemAcordion" href="./about.html#logrosTitulo"><button
+                            class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne"
+                            href="./about.html#objetivo">
+                            Competidor
+                        </button></a>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                     data-bs-parent="#accordionFlushExample">
@@ -259,10 +261,11 @@
 
             <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                        Entrenador
-                    </button>
+                    <a class="linkItemAcordion" href="./about.html#logrosTitulo"><button
+                            class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            Entrenador
+                        </button></a>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                     data-bs-parent="#accordionFlushExample">
@@ -354,10 +357,12 @@
 
             <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        Seminarios y Cursos
-                    </button>
+                    <a class="linkItemAcordion" href="./about.html#logrosTitulo"><button
+                            class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false"
+                            aria-controls="flush-collapseThree" href="./about.html#logrosTitulo">
+                            Seminarios y Cursos
+                        </button></a>
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
                     data-bs-parent="#accordionFlushExample">
@@ -541,14 +546,16 @@
     </aside>
 
     <!-- Academias -->
-    <div class="mw-100 container">
+    <div id="academiasDiv" class="mw-100 container">
         <section id="academiasSection" class="row">
-
+            <h1 class="subtituloTipoUno">Academias</h1>
             <div class="card col-md-6">
                 <img class="cardImagen col-md-12" src="../Multimedia/Academias/Jung-Do-Logo.jpg" alt="">
-                <p class="tituloAcademia"> ACADEMIA JUNG DO </p>
-                <p class="ubicacionAcademia instructorAcademia">Ciudad de Canelones, Uruguay</p>
-                <p class="instructorAcademia">Pablo Giménez 3er Dan</p>
+                <div class="cardText">
+                    <p class="tituloAcademia"> ACADEMIA JUNG DO </p>
+                    <p class="ubicacionAcademia instructorAcademia">Ciudad de Canelones, Uruguay</p>
+                    <p class="instructorAcademia">Pablo Giménez 3er Dan</p>
+                </div>
                 <div class="cardRedes container">
                     <div class="row cardSubRedes">
                         <a class="cardLinkRedes col-3"
@@ -564,10 +571,12 @@
 
             <div class="card col-md-6">
                 <img class="cardImagen" src="../Multimedia/Academias/marinos.png" alt="">
-                <p class="tituloAcademia"> ACADEMIA MARIÑO´S </p>
-                <p class="tituloAcademia"> HWA KWAN </p>
-                <p class="ubicacionAcademia instructorAcademia">La Plata, Argentina</p>
-                <p class="instructorAcademia">Martin Mariño 5to Dan</p>
+                <div class="cardText">
+                    <p class="tituloAcademia"> ACADEMIA MARIÑO´S </p>
+                    <p class="tituloAcademia"> HWA KWAN </p>
+                    <p class="ubicacionAcademia instructorAcademia">La Plata, Argentina</p>
+                    <p class="instructorAcademia">Martin Mariño 5to Dan</p>
+                </div>
                 <div class="cardRedes container">
                     <div class="row cardSubRedes">
                         <!-- <a class="cardLinkRedes col-3" href=""><img class="cardLogoRedes"
@@ -582,9 +591,11 @@
 
             <div class="card col-md-5">
                 <img class="cardImagen" src="../Multimedia/Academias/Yom Chi.png" alt="">
-                <p class="tituloAcademia"> ACADEMIA YOM CHI </p>
-                <p class="ubicacionAcademia instructorAcademia">Montevideo, Uruguay</p>
-                <p class="instructorAcademia">Oscar Rodríguez 3er Dan</p>
+                <div class="cardText">
+                    <p class="tituloAcademia"> ACADEMIA YOM CHI </p>
+                    <p class="ubicacionAcademia instructorAcademia">Montevideo, Uruguay</p>
+                    <p class="instructorAcademia">Oscar Rodríguez 3er Dan</p>
+                </div>
                 <div class="cardRedes container">
                     <div class="row cardSubRedes">
                         <a class="cardLinkRedes col-3" href="https://www.facebook.com/escuelayomchitkd.itf"><img
@@ -599,9 +610,11 @@
 
             <div class="card col-md-5">
                 <img class="cardImagen" src="../Multimedia/Academias/Ttang do.png" alt="">
-                <p class="tituloAcademia"> ACADEMIA TANG DO </p>
-                <p class="ubicacionAcademia instructorAcademia">Melo - Cerro Largo, Uruguay</p>
-                <p class="instructorAcademia">Tonny Olivera 4to Dan</p>
+                <div class="cardText">
+                    <p class="tituloAcademia"> ACADEMIA TANG DO </p>
+                    <p class="ubicacionAcademia instructorAcademia">Melo - Cerro Largo, Uruguay</p>
+                    <p class="instructorAcademia">Tonny Olivera 4to Dan</p>
+                </div>
                 <div class="cardRedes container">
                     <div class="row cardSubRedes">
                         <!-- <a class="cardLinkRedes col-3" href=""><img class="cardLogoRedes"
@@ -616,8 +629,10 @@
 
             <div class="card col-md-5">
                 <img class="cardImagen" src="../Multimedia/Academias/guk gi.png" alt="">
-                <p class="tituloAcademia"> ACADEMIA GUK GI </p>
-                <p class="instructorAcademia">Oscar Rodríguez 3er Dan</p>
+                <div class="cardText">
+                    <p class="tituloAcademia"> ACADEMIA GUK GI </p>
+                    <p class="instructorAcademia">Oscar Rodríguez 3er Dan</p>
+                </div>
                 <div class="cardRedes container">
                     <div class="row cardSubRedes">
                         <!-- <a class="cardLinkRedes col-3" href=""><img class="cardLogoRedes"
@@ -632,10 +647,12 @@
 
             <div class="card col-md-5">
                 <img class="cardImagen" src="../Multimedia/Academias/innae.png" alt="">
-                <p class="tituloAcademia"> ACADEMIA INNAE </p>
-                <p class="ubicacionAcademia instructorAcademia">Costa de Oro, Uruguay</p>
-                <p class="instructorAcademia">Claudia Montautti 2do Dan</p>
-                <p class="instructorAcademia">Martin Del Castillo 1do Dan</p>
+                <div class="cardText">
+                    <p class="tituloAcademia"> ACADEMIA INNAE </p>
+                    <p class="ubicacionAcademia instructorAcademia">Costa de Oro, Uruguay</p>
+                    <p class="instructorAcademia">Claudia Montautti 2do Dan</p>
+                    <p class="instructorAcademia">Martin Del Castillo 1do Dan</p>
+                </div>
                 <div class="cardRedes container">
                     <div class="row cardSubRedes">
                         <!-- <a class="cardLinkRedes col-3" href=""><img class="cardLogoRedes"
@@ -650,11 +667,13 @@
 
             <div class="card col-md-5">
                 <img class="cardImagen" src="../Multimedia/Academias/Sul Sa.png" alt="">
-                <p class="tituloAcademia"> ACADEMIA SUL SA </p>
-                <p class="ubicacionAcademia instructorAcademia">Costa de Oro, Uruguay</p>
-                <p class="instructorAcademia">Javier del Castillo 7mo Dan</p>
-                <p class="instructorAcademia">Claudia Montautti 2do Dan</p>
-                <p class="instructorAcademia">Martin Del Castillo 1do Dan</p>
+                <div class="cardText">
+                    <p class="tituloAcademia"> ACADEMIA SUL SA </p>
+                    <p class="ubicacionAcademia instructorAcademia">Costa de Oro, Uruguay</p>
+                    <p class="instructorAcademia">Javier del Castillo 7mo Dan</p>
+                    <p class="instructorAcademia">Claudia Montautti 2do Dan</p>
+                    <p class="instructorAcademia">Martin Del Castillo 1do Dan</p>
+                </div>
                 <div class="cardRedes container">
                     <div class="row cardSubRedes">
                         <!-- <a class="cardLinkRedes col-3" href=""><img class="cardLogoRedes"
