--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
             <div class="row subNavegacion">
                 <a href="./Pages/about.html" class="col-12 botonMain"><span id="btnAcerca">
                         Acerca de</span></a>
-                <span id="btnLogros" class="col-12 botonMain"> Logros </span>
-                <span id="btnLogros" class="col-12 botonMain"> Academias </span>
+                <a class="col-12 botonMain" href="./Pages/about.html#logrosTitulo"><span id="btnLogros"> Logros
+                    </span></a>
+                <a class="col-12 botonMain" href="./Pages/about.html#academiasDiv"><span id="btnLogros"> Academias
+                    </span></a>
                 <span id="btnGaleria" class="col-12 botonMain"> Galería </span>
                 <span id="btnContacto" class="col-12 botonMain"> Contacto </span>
             </div>
