se terminó la página en mobile

--- a/Pages/about_en.html
+++ b/Pages/about_en.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../Styles/style.css">
 
-    <title>Master del Castillo - Acerca de</title>
+    <title>Master del Castillo - About</title>
 </head>
 
 <body id="acercaMain">
@@ -74,46 +74,44 @@
                 <a href="../Pages/about_en.html#contenedorBotones" class="btnLenguaje col-4"><span
                         class="btnLenguajeTexto">English</span></a>
             </section>
+            <h1 class="subtituloTipoDos">His Story</h1>
 
-            <h1 class="subtituloTipoDos">Su Historia</h1>
+            <p class="acercaTexto">In 1992, the current Master Javier del Castillo began his practice in Taekwon-do.
+                However, in 1994, he started his
+                training as a Master by teaching young 16-year-olds with a blue belt, a role he has performed for over
+                30
+                years.
 
-            <p class="acercaTexto">En el año 1992, el actual Maestro Javier del Castillo, comenzó su práctica en el
-                Taekwon-do,
-                sin embargo, en el año
-                1994, empezaría la formación del rol de Maestro, dado que fue allí cuando comenzó, con el grado de cinto
-                azul, a
-                impartir enseñanzas a los jóvenes de 16 años iniciando este rol que ha desempeñado por más de 30 años.
-
-                El destino puso al General. Choi Hong Hi, en su camino en lo que fue la primera y única visita a Uruguay
-                del
-                fundador
-                del Taekwon-do en el año 1995. Un año más tarde, participa de su segundo curso con el Gral. Choi, en
-                Tucumán, Argentina
-                IIC, ya con un rumbo marcado a fuego, y un destino a forjar claro dentro del Taekwon-do.</p>
-
+                Fate led him to cross paths with General Choi Hong Hi during the first and only visit of the Taekwon-do
+                founder to
+                Uruguay in 1995. A year later, he participated in his second course with General Choi in Tucumán,
+                Argentina
+                IIC. From
+                that moment on, his path was set and his destiny within Taekwon-do was clear.
+            </p>
             <img class="acercaImagenTexto" id="objeto" src="../Multimedia/Acerca/AcercaJvier2.jpg" alt="">
 
+            <p>Over these 30 years, he has dedicated himself to constant practice and training with the greatest Martial
+                Arts experts,
+                building an extensive sports career as a competitor and coach.</p>
 
-            <h2 class="subtituloTipoDos">Actualidad</h2>
 
-            <p class="acercaTexto"> En la actualidad, sigue activo formando y preparando competidores en el ámbito
-                nacional
-                e internacional. Además de su rol como maestro de Taekwon-do, fue integrante del C.O.M. Council Of
-                Masters;
-                Representante para Sudamérica
-                de ITF Headquarters; y del Comité Técnico ITF Headquarters.
+            <h2 class="subtituloTipoDos">Present day</h2>
 
-                Brinda asesoramiento técnico a instructores de diferentes países, a través de cursos, clases
-                presenciales y
-                virtuales. El Master Javier del Castillo y el grupo de instructores que lidera, participan de
-                capacitaciones
-                constantes,
-                en todas las facetas del Arte Marcial, con exponentes locales e internacionales, con el objetivo de
-                brindar
-                a suss
+            <p class="acercaTexto"> In present days, he remains active in training and preparing competitors at both the
+                national and international levels.
 
-                practicantes la mejor calidad y experiencia en la práctica.</p>
+                In addition to his role as a Taekwon-do master, he is a member of the C.O.M. Council Of Masters; the
+                Representative for
+                South America at ITF Headquarters; and a member of the Technical Committee of ITF Headquarters.
 
+                Moreover, he provides technical guidance to instructors from different countries through courses,
+                in-person and virtual
+                classes. Master Javier del Castillo and the group of instructors he leads continuously participate in
+                training sessions
+                encompassing all aspects of the Martial Art, collaborating with local and international experts. Their
+                aim is to provide
+                their practitioners with the best quality and experience in their practice.</p>
 
             <img class="acercaImagenTexto" src="../Multimedia/Acerca/AcercaJvier4.jpg" alt="">
     </div>
@@ -124,7 +122,8 @@
     <!-- Logros, Cursos y Seminarios -->
     <aside class="container contenedorLogros">
         <h1 class="subtituloTipoUno" id="logrosTitulo">Logros</h1>
-        <p id="logrosTexto">A lo largo de su larga carrera en el Taekwon-do, el Master Javier del Castillo ha obtenido
+        <p id="logrosTexto">A lo largo de su larga carrera en el Taekwon-do, el Master Javier del Castillo ha
+            obtenido
             varios logros en
             competencias y eventos, tanto nacionales como internacionales</p>
 
@@ -219,7 +218,8 @@
                             <div class="evento row">
                                 <img src="../Multimedia/Icons/medal-color-icon.png" class="col-2 logrosIcono" alt="">
                                 <div class="eventoTexto col-8">
-                                    <p class="eventoNombre">Vice Campeón Panamericano - Formas y Lucha por Equipos</p>
+                                    <p class="eventoNombre">Vice Campeón Panamericano - Formas y Lucha por Equipos
+                                    </p>
                                     <p class="eventoNombre">Uruguay 2000</p>
                                 </div>
                             </div>
@@ -239,7 +239,8 @@
                             <div class="evento row">
                                 <img src="../Multimedia/Icons/medal-color-icon.png" class="col-2 logrosIcono" alt="">
                                 <div class="eventoTexto col-8">
-                                    <p class="eventoNombre">Campeón Sudamericano - Lucha, Formas y Lucha por Equipos</p>
+                                    <p class="eventoNombre">Campeón Sudamericano - Lucha, Formas y Lucha por Equipos
+                                    </p>
                                     <p class="eventoNombre">Chile 1994</p>
                                 </div>
                             </div>
@@ -296,7 +297,8 @@
                                 <img src="../Multimedia/Icons/medal-color-icon.png" class="col-2 logrosIcono" alt="">
                                 <div class="eventoTexto col-8">
                                     <p class="eventoNombre">Campeonayto del mundo Argentina 2022</p>
-                                    <p class="eventoNombre">Campeón con Equipo Uruguayo7 podios: 1°, 2° y 3° puesto.</p>
+                                    <p class="eventoNombre">Campeón con Equipo Uruguayo7 podios: 1°, 2° y 3° puesto.
+                                    </p>
                                 </div>
                             </div>
 
@@ -392,7 +394,8 @@
                             <div class="evento row">
                                 <img src="../Multimedia/Icons/viñeta.png" class="col-2 logrosIcono" alt="">
                                 <div class="eventoTexto col-8">
-                                    <p class="eventoNombre">Seminario Técnico. GM Néstor Galarraga y GM. José Maidana
+                                    <p class="eventoNombre">Seminario Técnico. GM Néstor Galarraga y GM. José
+                                        Maidana
                                     </p>
                                     <p class="eventoNombre">Uruguay 1997</p>
                                 </div>
@@ -403,7 +406,8 @@
                             <div class="evento row">
                                 <img src="../Multimedia/Icons/viñeta.png" class="col-2 logrosIcono" alt="">
                                 <div class="eventoTexto col-8">
-                                    <p class="eventoNombre">Seminario Técnico. Gm Trian Triue Quan y GM Benny Rivera</p>
+                                    <p class="eventoNombre">Seminario Técnico. Gm Trian Triue Quan y GM Benny Rivera
+                                    </p>
                                     <p class="eventoNombre">Uruguay 2002</p>
                                 </div>
                             </div>
