--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                     </span></a>
                 <a class="col-12 botonMain" href="./Pages/about.html#academiasDiv"><span id="btnLogros"> Academias
                     </span></a>
-                <span id="btnGaleria" class="col-12 botonMain"> Galería </span>
-                <span id="btnContacto" class="col-12 botonMain"> Contacto </span>
+                <a class="col-12 botonMain" href="./Pages/gallery.html"><span id="btnLogros"> Galería
+                    </span></a>
+                <a class="col-12 botonMain" href="./Pages/contact.html"><span id="btnLogros"> Contacto
+                    </span></a>
             </div>
         </section>
 
